RESOLVED FIXED Bug 240887
[Interop 2021] canvas-aspect-ratio tests failing on wpt.fyi
https://bugs.webkit.org/show_bug.cgi?id=240887
Summary [Interop 2021] canvas-aspect-ratio tests failing on wpt.fyi
Attachments
Radar WebKit Bug Importer
Comment 1 2022-05-24 15:28:17 PDT
Sammy Gill
Comment 2 2022-06-22 12:16:52 PDT
EWS
Comment 3 2022-06-30 10:38:36 PDT
Committed 252001@main (8c0165e26f14): <https://commits.webkit.org/252001@main> Reviewed commits have been landed. Closing PR #1690 and removing active labels.
Ahmad Saleem
Comment 4 2024-09-27 08:02:36 PDT
*** Bug 241139 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.