Implement aspect-ratio mapping for canvas element. https://bugs.webkit.org/show_bug.cgi?id=240887

Reviewed by Chris Dumez.

This patch adds the mapping between the width and height attributes,
which are both presentational hints, to the aspect-ratio property on
canvas elements. When a canvas element is created, its own
implementations of hasPresentationalHintsForAttribute and
collectPresentationalHintsForAttribute will be used to set the intrinsic
width and height of the element as well as set the aspect-ratio property
if both are provided.

https://html.spec.whatwg.org/multipage/rendering.html#attributes-for-embedded-content-and-images

* LayoutTests/TestExpectations:
* LayoutTests/imported/w3c/web-platform-tests/html/rendering/replaced-elements/attributes-for-embedded-content-and-images/canvas-aspect-ratio-expected.txt:
* Source/WebCore/html/HTMLCanvasElement.cpp:
(WebCore::HTMLCanvasElement::hasPresentationalHintsForAttribute const):
(WebCore::HTMLCanvasElement::collectPresentationalHintsForAttribute):
* Source/WebCore/html/HTMLCanvasElement.h:

* Source/WebCore/html/HTMLElement.cpp:
(WebCore::HTMLElement::addParsedWidthAndHeightToAspectRatioList):
(WebCore::HTMLElement::applyAspectRatioFromWidthAndHeightAttributesToStyle):
(WebCore::HTMLElement::applyAspectRatioWithoutDimensionalRulesFromWidthAndHeightAttributesToStyle):
There are two different ways to map the width and height to the aspect ratio:
1.) map to the aspect-ratio property (using dimension rules)
2.) map to the aspect-ratio property

The main difference in the parsing process is that only integer values
are outputted when parsing without dimension rules and dimension rules
will output any sort of number. For example, 0.5 will be parsed as 0.5
when usig 1, but will be 0 when parsed with 2. This new method parses
the width and height without dimensional rules and uses the results
for the aspect-ratio property.

https://html.spec.whatwg.org/multipage/rendering.html#map-to-the-aspect-ratio-property

* Source/WebCore/html/HTMLElement.h:
* Source/WebCore/rendering/RenderBox.h:
(WebCore::RenderBox::isAspectRatioDegenerate const):
The CSS spec defines a degenerate aspect-ratio as one that is either
0 or infinite. This helper method can be used in places where we
perform an if(aspectRatio) check like in RenderReplaced::computeReplacedLogicalWidth
so that we can catch both of the cases. Before adding this method, the
case where the aspect ratio is infinite would fall through into the
if branch when it should not have.

* Source/WebCore/rendering/RenderReplaced.cpp:
(WebCore::RenderReplaced::computeReplacedLogicalWidth const):

Canonical link: https://commits.webkit.org/252001@main